<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- DESIGN IMAGE -->
    <ImageView
        android:id="@+id/imgDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/intro_design"
        android:scaleType="centerCrop"
        android:contentDescription="@string/intro_image_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- NEXT BUTTON -->
    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/intro_next"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:background="@drawable/btn_yellow_round"
        app:layout_constraintBottom_toTopOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- LOGIN TEXT -->
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_login"
        android:textSize="13sp"
        android:textColor="#AAAAAA"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
